--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-
-
 server:
   port: 8080
   servlet:
@@ -8,27 +6,14 @@ server:
       charset: UTF-8
       enabled: true
       force: true
-
+    
 spring:
   datasource:
-    hikari:
-      connection-timeout: 5000
-      validation-timeout: 1000
-      maximum-pool-size: 30
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost/qtype?serverTimezone=Asia/Seoul&characterEncoding=UTF-8 #13.125.117.231    
     username: cos
     password: cos1234
-logging:               
-  level:
-    root: info
-    shutup.code.security: debug
-  devtools:
-    livereload:
-      enabled: true
-  thymeleaf:
-    cache: false    
-    
+#  mvc hiddenmethod filter enabled : true                       
 
   jpa:
     open-in-view: true
@@ -36,7 +21,7 @@ logging:
       ddl-auto: update
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl 
-        use-new-id-generator-mappings: true
+        use-new-id-generator-mappings: false
     show-sql: true
     properties:
       hibernate.format_sql: true
@@ -46,3 +31,4 @@ logging:
   jackson:
     serialization:
       fail-on-empty-beans: false
+
